# proyecto-algoritmos

./: .gitignore  AlgoritmosQMake.pro  CMakeLists.txt  README.md  alertedobjects.cpp  alertedobjects.h  detectedobjects.cpp  detectedobjects.h  indetectionobjects.cpp  indetectionobjects.h  main.cpp  mainwindow.cpp  mainwindow.h
data/: alerts.json
